@@ -8,6 +8,7 @@ import os
 import pickle
 from subprocess import Popen, STDOUT, PIPE, CalledProcessError
 import sys
+import time
 
 # This function looks for known exceptions occuring when interpreting sysArgs
 def SysArgsExceptionCatcher(sysArgs):
@@ -97,37 +98,19 @@ def DicInputs(aDic):
 
 
 def GetAMIClient(useReplica=False):
-    from pyAMI.pyAMIErrors import AMI_Error
-    try:
-        from pyAMI.pyAMI import AMI
-    except AMI_Error:
-        print "WARNING unable to import AMI, maybe because of temporary AMI unavailability. Trying again..."
-        from pyAMI.pyAMI import AMI        
-    except ImportError:
-        print "WARNING unable to import AMI from pyAMI with standard $PYTHONPATH."
-        print "Will manually add ZSI and 4suite, then try again..."
-        import sys
-        sys.path.insert(0,'/afs/cern.ch/atlas/offline/external/ZSI/2.1-a1/lib/python')
-        sys.path.insert(0,'/afs/cern.ch/sw/lcg/external/4suite/1.0.2_python2.5/slc4_ia32_gcc34/lib/python2.5/site-packages')
-        from pyAMI.pyAMI import AMI
-        print "import pyAMI was succesful"
+    # This version uses AMI4
+    from pyAMI.exceptions import AMI_Error
+    from pyAMI.client import AMIClient
 
     if useReplica:
         print "INFO: Using CERN AMI replica"
-        from pyAMI.pyAMIEndPoint import pyAMIEndPoint
-        pyAMIEndPoint.setType("replica")
+        from pyAMI import endpoint
+        endpoint.TYPE = "replica"
     else:
         print "INFO: Using primary AMI"
 
-    amiclient=AMI()
-    if 'AMIConfFile' in os.environ:
-        from ConfigParser import Error as ConfigParserError
-        try:
-            amiclient.readConfig(os.environ['AMIConfFile'])
-        except ConfigParserError, e:
-            print "WARNING: Problem reading AMI configuration file:", e
-        except AttributeError, e:
-            print "WARNING: The version of pyAMI in this release does not support configuration files (%s)" % e
+    amiclient=AMIClient()
+    
     return amiclient
 
 
@@ -188,11 +171,6 @@ def GetInfoFromAMIXML(amitag, suppressPass = True):
     #get dic from AMI
     amiclient=GetAMIClient()
     l=['ListConfigurationTag','-configTag='+amitag]
-    if 'AMIUser' in os.environ and 'AMIPass' in os.environ:
-        l.append('-AMIUser=%s' % os.environ['AMIUser'])
-        l.append('-AMIPass=%s' % os.environ['AMIPass'])
-        if suppressPass:
-            del(os.environ['AMIPass'])
     result=amiclient.execute(l)
     dicOfDico=result.getDict()
     xmlstr = str(dicOfDico[u'rowset_'+amitag][u''+amitag][u'moreInfo'])
@@ -217,28 +195,23 @@ def GetInfoFromAMIXML(amitag, suppressPass = True):
 
 
 def GetInfoFromAMIPython(amitag, suppressPass = True):
-    from pyAMI.pyAMIErrors import AMI_Error
+    from pyAMI.exceptions import AMI_Error
     #get dics from AMI
     amiclient=GetAMIClient()
-    l=['ListConfigurationTag','configTag='+amitag]
-    if 'AMIUser' in os.environ and 'AMIPass' in os.environ:
-        l.append('-AMIUser=%s' % os.environ['AMIUser'])
-        l.append('-AMIPass=%s' % os.environ['AMIPass'])
-        if suppressPass:
-            del(os.environ['AMIPass'])
-
+    l=['ListConfigurationTag','configTag={0}'.format(amitag)]
+    
     try:
         result=amiclient.execute(l)
-    except Exception:
-        print "WARNING problem in amiclient.execute, try using CERN replica instead"
+    except Exception, e:
+        print "WARNING problem in amiclient.execute, try using CERN replica instead ({0})".format(e)
         amiclient=GetAMIClient(useReplica=True)
         try:
             result=amiclient.execute(l)
         except Exception:
-            print "FATAL could not execute AMI-command, gonna crash now..."
+            print "FATAL could not execute AMI-command. Will reraise last exception for debugging."
             raise
         
-    dicOfDico=result.getDict()
+    dicOfDico=result.to_dict()
     #configuration is a python dic in string format, get back to real python using exec 
     strDic=dicOfDico[u'rowset_'+amitag][u''+amitag][u'phconfig']
     exec("amiPhysDic="+strDic)
