@@ -1,3 +1,10 @@
+2012-01-09 Graeme Stewart <graeme.andrew.stewart@cern.ch>
+    * ArgDicTools.py Update to PyAMI client version 4
+    *** Important: Until PyAMI changes are accepted into the release *you* are targetting
+        you will need to make PATJobTransforms-00-04-43-XX tags for releases using PyAMI 2.
+        Information/Help from JT devs: atlas-comp-transforms-dev@cern.ch
+    * Tagging as PATJobTransforms-00-05-00
+
 2012-12-13 Graeme Stewart <graeme.andrew.stewart@cern.ch>
     * Reco_trf.py Add DAOD_JPSIMUMU and DAOD_UPSIMUMU outputs to LODPK (from James Catmore)
     * Tagging as PATJobTransforms-00-04-43
